@@ -10,6 +10,7 @@ Permitir grabar pantalla de ZX80/81 a archivo .scr
 Agregada conversión de archivos ZX81 P a P81, y P81 a P
 Permitir grabar una nota de texto en un snapshot ZSF
 Mejorada temporización en Windows y otros sistemas que usen driver de video SDL. Ahora usa temporización de SDL
+Mejorada temporización en Mac usando temporizador nativo
 
 Mejorado ZX Vision:
 - Permitir ocultar ventanas minimizadas
