@@ -9234,6 +9234,11 @@ void menu_settings_danger_zone_timer_set_sdl(MENU_ITEM_PARAMETERS)
     menu_settings_danger_zone_timer_set_parm(TIMER_SDL);
 }
 
+void menu_settings_danger_zone_timer_set_mac(MENU_ITEM_PARAMETERS)
+{
+    menu_settings_danger_zone_timer_set_parm(TIMER_MAC);
+}
+
 void menu_settings_danger_zone_timer(MENU_ITEM_PARAMETERS)
 {
 
@@ -9254,6 +9259,9 @@ void menu_settings_danger_zone_timer(MENU_ITEM_PARAMETERS)
             menu_add_item_menu_format(array_menu_common,MENU_OPCION_NORMAL,menu_settings_danger_zone_timer_set_sdl,NULL,"SDL");
         }
 
+        if (!strcmp(scr_new_driver_name,"cocoa")) {
+            menu_add_item_menu_format(array_menu_common,MENU_OPCION_NORMAL,menu_settings_danger_zone_timer_set_mac,NULL,"Mac");
+        }
 
         menu_add_item_menu_separator(array_menu_common);
 
